Further changes for initial release.